--- a/lessons/What-Is-the-Role-of-Open-Graph-Tags-and-How-Do-They-Affect-SEO.html
+++ b/lessons/What-Is-the-Role-of-Open-Graph-Tags-and-How-Do-They-Affect-SEO.html
@@ -518,7 +518,7 @@
         function showSlide(n) {
             slides[currentSlide].classList.remove('active');
             currentSlide = (n + slides.length) % slides.length;
-            slides[currentSlide].classList.add('active);
+            slides[currentSlide].classList.add('active');
             currentSlideSpan.textContent = currentSlide + 1;
             
             prevBtn.disabled = currentSlide === 0;
