--- a/lessons/What-Is-the-Role-of-Open-Graph-Tags-and-How-Do-They-Affect-SEO.html
+++ b/lessons/What-Is-the-Role-of-Open-Graph-Tags-and-How-Do-They-Affect-SEO.html
@@ -328,7 +328,7 @@
                         <div class="code-block">
                             <pre><span class="tag">&lt;meta</span>
   <span class="attr">property</span>=<span class="value">"og:title"</span>
-  <span class="attr">content</span>=<span class="value">"freeCodeCamp.org"</span>
+  <span class="attr">content</span>=<span class="value">"se1400.github.io"</span>
 <span class="tag">/&gt;</span></pre>
                         </div>
                     </div>
@@ -374,7 +374,7 @@
                 <div class="concept">
                     <h2>OG Image Property</h2>
                     <p>The third important OG property would be the <strong>image</strong>.</p>
-                    <p>In this example, the Open Graph image is pointing to the freeCodeCamp logo.</p>
+                    <p>In this example, the Open Graph image is pointing to the se1400 logo.</p>
                     <p>All of these images should be high quality with good dimensions and ratios.</p>
                 </div>
                 <div class="info-section">
@@ -383,7 +383,7 @@
                         <div class="code-block">
                             <pre><span class="tag">&lt;meta</span>
   <span class="attr">property</span>=<span class="value">"og:image"</span>
-  <span class="attr">content</span>=<span class="value">"https://cdn.freecodecamp.org/
+  <span class="attr">content</span>=<span class="value">"https://cdn.se1400.github.io/
   platform/universal/fcc_meta_
   1920X1080-indigo.png"</span>
 <span class="tag">/&gt;</span></pre>
@@ -430,7 +430,7 @@
                         <div class="code-block">
                             <pre><span class="tag">&lt;meta</span>
   <span class="attr">property</span>=<span class="value">"og:url"</span>
-  <span class="attr">content</span>=<span class="value">"https://www.freecodecamp.org"</span>
+  <span class="attr">content</span>=<span class="value">"https://www.se1400.github.io"</span>
 <span class="tag">/&gt;</span></pre>
                         </div>
                     </div>
