--- a/lessons/When-Should-You-Use-the-Emphasis-Element-Over-the-Idiomatic-Text-Element.html
+++ b/lessons/When-Should-You-Use-the-Emphasis-Element-Over-the-Idiomatic-Text-Element.html
@@ -468,7 +468,7 @@ This is <span class="tag">&lt;em&gt;</span>critical<span class="tag">&lt;/em&gt;
         const prevBtn = document.getElementById('prevBtn');
         const nextBtn = document.getElementById('nextBtn');
         const currentSlideSpan = document.getElementById('currentSlide');
-        const totalSlidesSpan = document.getElementById('totalSlide');
+        const totalSlidesSpan = document.getElementById('totalSlides');
 
         totalSlidesSpan.textContent = slides.length;
 
