--- a/lessons/How-Do-You-Display-Addresses-in-HTML.html
+++ b/lessons/How-Do-You-Display-Addresses-in-HTML.html
@@ -1,1 +1,492 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Address Element</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            background: #f5f5f5;
+            color: #333;
+            overflow: hidden;
+        }
+
+        .presentation {
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+        }
+
+        .slide-container {
+            width: 90%;
+            max-width: 1200px;
+            height: 85vh;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            padding: 60px;
+            display: none;
+            flex-direction: column;
+            position: relative;
+        }
+
+        .slide-container.active {
+            display: flex;
+        }
+
+        .slide-content {
+            display: flex;
+            gap: 40px;
+            flex: 1;
+            overflow-y: auto;
+        }
+
+        .concepts {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+        }
+
+        .concept {
+            background: #fafafa;
+            padding: 20px;
+            border-radius: 6px;
+            border-left: 4px solid #881518;
+        }
+
+        .concept h3 {
+            color: #881518;
+            font-size: 1.3em;
+            margin-bottom: 12px;
+        }
+
+        .concept p {
+            line-height: 1.7;
+            color: #555;
+            font-size: 1.05em;
+        }
+
+        .concept ul {
+            margin-top: 12px;
+            margin-left: 20px;
+        }
+
+        .concept li {
+            line-height: 1.8;
+            color: #555;
+            margin-bottom: 8px;
+        }
+
+        .concept strong {
+            color: #881518;
+        }
+
+        .concept code {
+            background: #e8e8e8;
+            padding: 2px 6px;
+            border-radius: 3px;
+            font-family: 'Monaco', 'Menlo', 'Consolas', monospace;
+            font-size: 0.95em;
+            color: #881518;
+        }
+
+        .code-examples {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        .code-block {
+            background: #2d2d2d;
+            border-radius: 6px;
+            padding: 20px;
+            overflow-x: auto;
+        }
+
+        .code-block .label {
+            color: #888;
+            font-size: 0.85em;
+            margin-bottom: 10px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .code-block pre {
+            margin: 0;
+            color: #f8f8f2;
+            font-family: 'Monaco', 'Menlo', 'Consolas', monospace;
+            font-size: 0.95em;
+            line-height: 1.6;
+        }
+
+        .code-block .tag {
+            color: #ff79c6;
+        }
+
+        .code-block .attr {
+            color: #50fa7b;
+        }
+
+        .code-block .string {
+            color: #f1fa8c;
+        }
+
+        .code-block .comment {
+            color: #6272a4;
+        }
+
+        .example-box {
+            background: #fff;
+            border: 2px solid #881518;
+            border-radius: 6px;
+            padding: 20px;
+        }
+
+        .example-box .example-label {
+            color: #881518;
+            font-size: 0.85em;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            margin-bottom: 10px;
+        }
+
+        .example-box p {
+            color: #333;
+            font-size: 1.05em;
+            line-height: 1.6;
+        }
+
+        .example-box h4 {
+            color: #333;
+            font-size: 1.2em;
+            margin-bottom: 8px;
+        }
+
+        .warning-box {
+            background: #fff3cd;
+            border-left: 4px solid #ffc107;
+            padding: 15px;
+            margin-top: 15px;
+            border-radius: 4px;
+        }
+
+        .warning-box p {
+            color: #856404;
+            font-size: 0.95em;
+            line-height: 1.6;
+        }
+
+        .navigation {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 30px;
+            padding-top: 20px;
+            border-top: 2px solid #eee;
+        }
+
+        .nav-btn {
+            background: #881518;
+            color: white;
+            border: none;
+            padding: 12px 30px;
+            border-radius: 6px;
+            cursor: pointer;
+            font-size: 1em;
+            transition: background 0.3s;
+        }
+
+        .nav-btn:hover {
+            background: #a01a1d;
+        }
+
+        .nav-btn:disabled {
+            background: #ccc;
+            cursor: not-allowed;
+        }
+
+        .slide-counter {
+            color: #881518;
+            font-size: 1.1em;
+            font-weight: 600;
+        }
+
+        @media (max-width: 768px) {
+            .slide-container {
+                padding: 30px 20px;
+                height: 90vh;
+            }
+
+            .slide-content {
+                flex-direction: column;
+                gap: 25px;
+            }
+
+            .concept h3 {
+                font-size: 1.1em;
+            }
+
+            .concept p, .concept li {
+                font-size: 0.95em;
+            }
+
+            .code-block {
+                padding: 15px;
+            }
+
+            .code-block pre {
+                font-size: 0.85em;
+            }
+
+            .nav-btn {
+                padding: 10px 20px;
+                font-size: 0.9em;
+            }
+
+            .example-box {
+                padding: 15px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="presentation">
+        <!-- Slide 1 -->
+        <div class="slide-container active">
+            <div class="slide-content">
+                <div class="concepts">
+                    <div class="concept">
+                        <h3>The &lt;address&gt; Element</h3>
+                        <p>The <strong>contact address element</strong> is used to represent contact information for a section on a web page.</p>
+                        <p style="margin-top: 15px;">The <code>&lt;address&gt;</code> element is versatile and can be used for:</p>
+                        <ul>
+                            <li>Business pages</li>
+                            <li>Author pages</li>
+                            <li>Personal sites</li>
+                        </ul>
+                    </div>
+                    <div class="concept">
+                        <h3>Semantic HTML</h3>
+                        <p>When building contact sections, use the semantic <code>&lt;address&gt;</code> element over a generic element like <code>&lt;div&gt;</code>.</p>
+                    </div>
+                </div>
+                <div class="code-examples">
+                    <div class="example-box">
+                        <div class="example-label">Why Use Semantic Elements?</div>
+                        <p><strong>Better:</strong> Provides meaning and context</p>
+                        <p style="margin-top: 10px; color: #888;"><code>&lt;address&gt;</code> - Clear purpose for contact info</p>
+                        <p style="margin-top: 15px;"><strong>Generic:</strong> No inherent meaning</p>
+                        <p style="margin-top: 10px; color: #888;"><code>&lt;div&gt;</code> - Just a container</p>
+                    </div>
+                </div>
+            </div>
+            <div class="navigation">
+                <button class="nav-btn" id="prev" disabled>← Previous</button>
+                <div class="slide-counter"><span id="current">1</span> / <span id="total">4</span></div>
+                <button class="nav-btn" id="next">Next →</button>
+            </div>
+        </div>
+
+        <!-- Slide 2 -->
+        <div class="slide-container">
+            <div class="slide-content">
+                <div class="concepts">
+                    <div class="concept">
+                        <h3>Basic Address Structure</h3>
+                        <p>A typical contact address includes company name, physical address, phone, and email information.</p>
+                    </div>
+                    <div class="concept">
+                        <h3>Line Breaks in Addresses</h3>
+                        <p>Use the <code>&lt;br&gt;</code> (line break) element to show divisions between street name, city, and country in physical addresses.</p>
+                    </div>
+                </div>
+                <div class="code-examples">
+                    <div class="code-block">
+                        <div class="label">Company Contact Example</div>
+                        <pre><span class="tag">&lt;address&gt;</span>
+  <span class="tag">&lt;h2&gt;</span>Company Name<span class="tag">&lt;/h2&gt;</span>
+  <span class="tag">&lt;p&gt;</span>
+    1234 Elm Street<span class="tag">&lt;br&gt;</span>
+    Springfield, IL 62701<span class="tag">&lt;br&gt;</span>
+    United States
+  <span class="tag">&lt;/p&gt;</span>
+  <span class="tag">&lt;p&gt;</span>Phone: <span class="tag">&lt;a</span> <span class="attr">href</span>=<span class="string">"tel:+15555555555"</span><span class="tag">&gt;</span>
+    +1 (555) 555-5555
+  <span class="tag">&lt;/a&gt;&lt;/p&gt;</span>
+  <span class="tag">&lt;p&gt;</span>Email: <span class="tag">&lt;a</span> <span class="attr">href</span>=<span class="string">"mailto:contact@company.com"</span><span class="tag">&gt;</span>
+    contact@company.com
+  <span class="tag">&lt;/a&gt;&lt;/p&gt;</span>
+<span class="tag">&lt;/address&gt;</span></pre>
+                    </div>
+                    <div class="example-box">
+                        <div class="example-label">Browser Output</div>
+                        <h4>Company Name</h4>
+                        <p>1234 Elm Street<br>Springfield, IL 62701<br>United States</p>
+                        <p style="margin-top: 10px;">Phone: +1 (555) 555-5555</p>
+                        <p style="margin-top: 5px;">Email: contact@company.com</p>
+                    </div>
+                </div>
+            </div>
+            <div class="navigation">
+                <button class="nav-btn" id="prev">← Previous</button>
+                <div class="slide-counter"><span id="current">2</span> / <span id="total">4</span></div>
+                <button class="nav-btn" id="next">Next →</button>
+            </div>
+        </div>
+
+        <!-- Slide 3 -->
+        <div class="slide-container">
+            <div class="slide-content">
+                <div class="concepts">
+                    <div class="concept">
+                        <h3>Phone Number Links</h3>
+                        <p>Use an anchor element with the <code>href</code> value set for telephone numbers using the <strong>tel:</strong> protocol.</p>
+                        <p style="margin-top: 15px;">The <code>tel:+</code> value inside the <code>href</code> attribute creates a clickable link to initiate a phone call on devices that support it.</p>
+                    </div>
+                </div>
+                <div class="code-examples">
+                    <div class="code-block">
+                        <div class="label">Phone Link Syntax</div>
+                        <pre><span class="tag">&lt;a</span> <span class="attr">href</span>=<span class="string">"tel:+15555555555"</span><span class="tag">&gt;</span>
+  +1 (555) 555-5555
+<span class="tag">&lt;/a&gt;</span></pre>
+                    </div>
+                    <div class="example-box">
+                        <div class="example-label">How It Works</div>
+                        <p><strong>Desktop:</strong> May open a calling app (Skype, FaceTime, etc.)</p>
+                        <p style="margin-top: 10px;"><strong>Mobile:</strong> Opens phone dialer with number pre-filled</p>
+                    </div>
+                    <div class="code-block">
+                        <div class="label">Format Breakdown</div>
+                        <pre><span class="comment">/* tel: protocol structure */</span>
+
+tel:<span class="tag">+</span>[country code][area code][number]
+
+<span class="comment">/* Example: US phone number */</span>
+tel:<span class="tag">+1</span>5555555555
+
+<span class="comment">/* The + indicates international format */</span></pre>
+                    </div>
+                </div>
+            </div>
+            <div class="navigation">
+                <button class="nav-btn" id="prev">← Previous</button>
+                <div class="slide-counter"><span id="current">3</span> / <span id="total">4</span></div>
+                <button class="nav-btn" id="next">Next →</button>
+            </div>
+        </div>
+
+        <!-- Slide 4 -->
+        <div class="slide-container">
+            <div class="slide-content">
+                <div class="concepts">
+                    <div class="concept">
+                        <h3>Email Links (mailto)</h3>
+                        <p>Use an anchor element with the <code>href</code> value set to a <strong>mailto:</strong> link.</p>
+                        <p style="margin-top: 15px;"><strong>mailto:</strong> links are used to allow users to open a new email within their preferred email client.</p>
+                    </div>
+                    <div class="concept">
+                        <h3>Downside of mailto Links</h3>
+                        <p>Users often perceive <code>mailto:</code> links as spam. Unfortunately, many spammers use this option to send emails to users.</p>
+                        <p style="margin-top: 15px;"><strong>Keep this in mind</strong> when deciding whether to use <code>mailto:</code> links on your website.</p>
+                    </div>
+                </div>
+                <div class="code-examples">
+                    <div class="code-block">
+                        <div class="label">Email Link Syntax</div>
+                        <pre><span class="tag">&lt;a</span> <span class="attr">href</span>=<span class="string">"mailto:contact@company.com"</span><span class="tag">&gt;</span>
+  contact@company.com
+<span class="tag">&lt;/a&gt;</span></pre>
+                    </div>
+                    <div class="example-box">
+                        <div class="example-label">What Happens</div>
+                        <p>When clicked, opens the user's default email client (Gmail, Outlook, Apple Mail, etc.) with a new message addressed to the specified email.</p>
+                    </div>
+                    <div class="warning-box">
+                        <p><strong>⚠ Spam Concern:</strong> Spammers often target mailto links. Users may hesitate to click them due to spam associations.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="navigation">
+                <button class="nav-btn" id="prev">← Previous</button>
+                <div class="slide-counter"><span id="current">4</span> / <span id="total">4</span></div>
+                <button class="nav-btn" id="next" disabled>Next →</button>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        let currentSlide = 0;
+        const slides = document.querySelectorAll('.slide-container');
+        const totalSlides = slides.length;
+
+        function showSlide(n) {
+            slides[currentSlide].classList.remove('active');
+            currentSlide = n;
+            slides[currentSlide].classList.add('active');
+            updateNavigation();
+        }
+
+        function updateNavigation() {
+            slides.forEach((slide, index) => {
+                const prevBtn = slide.querySelector('#prev');
+                const nextBtn = slide.querySelector('#next');
+                const currentSpan = slide.querySelector('#current');
+
+                currentSpan.textContent = index + 1;
+
+                if (index === 0) {
+                    prevBtn.disabled = true;
+                } else {
+                    prevBtn.disabled = false;
+                }
+
+                if (index === totalSlides - 1) {
+                    nextBtn.disabled = true;
+                } else {
+                    nextBtn.disabled = false;
+                }
+            });
+        }
+
+        // Event delegation for navigation buttons
+        document.addEventListener('click', (e) => {
+            if (e.target.id === 'next' && !e.target.disabled) {
+                if (currentSlide < totalSlides - 1) {
+                    showSlide(currentSlide + 1);
+                }
+            } else if (e.target.id === 'prev' && !e.target.disabled) {
+                if (currentSlide > 0) {
+                    showSlide(currentSlide - 1);
+                }
+            }
+        });
+
+        // Keyboard navigation
+        document.addEventListener('keydown', (e) => {
+            if (e.key === 'ArrowRight' && currentSlide < totalSlides - 1) {
+                showSlide(currentSlide + 1);
+            } else if (e.key === 'ArrowLeft' && currentSlide > 0) {
+                showSlide(currentSlide - 1);
+            }
+        });
+
+        // Initialize
+        updateNavigation();
+    </script>
+</body>
+</html>
