--- a/lessons/What-Are-Some-Ways-to-Make-Web-Applications-Keyboard-Accessible.html
+++ b/lessons/What-Are-Some-Ways-to-Make-Web-Applications-Keyboard-Accessible.html
@@ -359,8 +359,7 @@
 <video 
     controls
     src="https://se1400.github.io/curriculum/js-music-player/friday.mp4"
-    width="400"
-    height="300"
+    style="width:200px; height:auto;"
     crossorigin="anonymous">
   <track
     default
