--- a/lessons/What-Are-Good-Ways-to-Make-Audio-and-Video-Content-Accessible.html
+++ b/lessons/What-Are-Good-Ways-to-Make-Audio-and-Video-Content-Accessible.html
@@ -334,6 +334,20 @@
                 </div>
             </div>
             
+
+            <video 
+                controls
+                src="https://se1400.github.io/curriculum/js-music-player/friday.mp4"
+                style="width:200px; height:auto; float:right; margin-left:20px;"
+                crossorigin="anonymous">
+            <track
+                default
+                kind="captions"
+                srclang="en"
+                label="English"
+                src="https://se1400.github.io/curriculum/js-music-player/friday.vtt" />
+            </video>
+
             <div class="code-label">Video Example:</div>
             <div class="code-example"><code>&lt;video width="400" height="300" controls src="video.mp4"&gt;
   &lt;track
@@ -355,42 +369,6 @@
 &lt;/audio&gt;</code></div>
 
 
-
-<video 
-    controls
-    src="https://se1400.github.io/curriculum/js-music-player/friday.mp4"
-    style="width:200px; height:auto;"
-    crossorigin="anonymous">
-  <track
-    default
-    kind="captions"
-    srclang="en"
-    label="English"
-    src="https://se1400.github.io/curriculum/js-music-player/friday.vtt" />
-</video>
-
-<div style="height:150px;width:100%;text-align:center;">
-    <audio style="width:100%;" id="vtt-player" controls src="https://se1400.github.io/curriculum/js-music-player/bbc-pm.mp4" crossorigin="anonymous">
-        <track default kind="captions" label="captions" srclang="en" src="https://se1400.github.io/curriculum/js-music-player/bbc-pm.vtt" />
-    </audio>
-    <div style="display:none;text-align:center;font-family:monospace;font-weight:bold;text-wrap:balance" id="vtt-text"></div>
-</div>
-
-<script>
-// Safari needs to be specifically told to show this track, for some reason.
-document.getElementById('vtt-player').textTracks[0].mode="showing";
-
-document.getElementById('vtt-player').addEventListener('play', function() {
-    //We hid the captions in the div above, since Safari shows them on page load
-    //Now the listener has hit play, show them.
-    document.getElementById('vtt-text').style.display="block";
-});
-
-document.getElementById('vtt-player').textTracks[0].addEventListener('cuechange', function() {
-    //Update the caption
-    document.getElementById('vtt-text').innerText = this.activeCues[0].text;
-});
-</script>
 
 
 
