--- a/lessons/What-Are-Good-Ways-to-Make-Audio-and-Video-Content-Accessible.html
+++ b/lessons/What-Are-Good-Ways-to-Make-Audio-and-Video-Content-Accessible.html
@@ -336,7 +336,7 @@
             
 
            <div class="code-label">Video Example:</div>
-           
+           <div>
             <video 
                 controls
                 src="https://se1400.github.io/curriculum/js-music-player/friday.mp4"
@@ -358,7 +358,7 @@
     label="English"
   /&gt;
 &lt;/video&gt;</code></div>
-
+</div>
             <div class="code-label">Audio Example:</div>
             <div class="code-example"><code>&lt;audio controls src="sample.mp3"&gt;
   &lt;track
