--- a/lessons/What-Are-Best-Practices-for-Designing-a-Dark-Mode-Feature.html
+++ b/lessons/What-Are-Best-Practices-for-Designing-a-Dark-Mode-Feature.html
@@ -157,6 +157,83 @@
             font-weight: bold;
         }
 
+        .example-visual {
+            margin-top: 2rem;
+        }
+
+        .visual-comparison {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 2rem;
+        }
+
+        .example-bad,
+        .example-good {
+            background: #2a2a2a;
+            padding: 2rem;
+            border-radius: 8px;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 1rem;
+        }
+
+        .example-label {
+            color: #e0e0e0;
+            font-size: 1.1rem;
+            font-weight: bold;
+            margin-bottom: 1rem;
+        }
+
+        .saturated-button {
+            background: #ff00ff;
+            color: white;
+            border: none;
+            padding: 1rem 2rem;
+            font-size: 1.1rem;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+
+        .desaturated-button {
+            background: #9b6b9e;
+            color: #e8e8e8;
+            border: none;
+            padding: 1rem 2rem;
+            font-size: 1.1rem;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+
+        .contrast-example {
+            padding: 2rem;
+            border-radius: 8px;
+            margin-top: 1rem;
+        }
+
+        .harsh-contrast {
+            background: #000000;
+            color: #ffffff;
+        }
+
+        .harsh-contrast h4 {
+            color: #ffffff;
+            margin-bottom: 1rem;
+        }
+
+        .soft-contrast {
+            background: #2a2a2a;
+            color: #d0d0d0;
+        }
+
+        .soft-contrast h4 {
+            color: #e8e8e8;
+            margin-bottom: 1rem;
+        }
+
         @media (max-width: 768px) {
             .slideshow-container {
                 padding: 1rem;
@@ -179,6 +256,10 @@
             }
 
             .comparison-grid {
+                grid-template-columns: 1fr;
+            }
+
+            .visual-comparison {
                 grid-template-columns: 1fr;
             }
 
@@ -236,6 +317,18 @@
                 <h3>Best Practice: Use Desaturated Colors</h3>
                 <p>Colors that are <span class="emphasis">less intense</span>, with a <span class="emphasis">lower saturation level</span>, and more comfortable to look at in dark mode.</p>
             </div>
+            <div class="example-visual">
+                <div class="visual-comparison">
+                    <div class="example-bad">
+                        <div class="example-label">❌ Too Intense</div>
+                        <button class="saturated-button">Click Me</button>
+                    </div>
+                    <div class="example-good">
+                        <div class="example-label">✓ Comfortable</div>
+                        <button class="desaturated-button">Click Me</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Slide 4: Contrast Considerations -->
@@ -249,6 +342,18 @@
                 <div class="comparison-box">
                     <h3>✓ Dark Gray + Light Gray Text</h3>
                     <p>Softer contrast that is <span class="emphasis">easier on the eyes</span> and more comfortable to read.</p>
+                </div>
+            </div>
+            <div class="example-visual">
+                <div class="visual-comparison">
+                    <div class="contrast-example harsh-contrast">
+                        <h4>High Contrast</h4>
+                        <p>Pure black background with white text. While readable, it can be harsh on the eyes during extended use.</p>
+                    </div>
+                    <div class="contrast-example soft-contrast">
+                        <h4>Soft Contrast</h4>
+                        <p>Dark gray background with light gray text. Easier to read and more comfortable for longer sessions.</p>
+                    </div>
                 </div>
             </div>
         </div>
