--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
-<div id="livecodes-gq4wxthioo"></div>
+<div id="livecodes-htnun04u1p"></div>
 <script src="https://cdn.jsdelivr.net/npm/livecodes@0.12.0/livecodes.umd.js"></script>
 <script>
   const options = {
-    "appUrl": "https://v47.livecodes.io/",
-    "import": "id/prdnah4x2g6"
+    "config": {
+      "tools": {
+        "enabled": "all",
+        "status": "open",
+        "active": "console"
+      },
+      "readonly": true
+    },
+    "import": "id/u3rxnfxdwfx"
   };
-  livecodes.createPlayground("#livecodes-gq4wxthioo", options);
+  livecodes.createPlayground("#livecodes-htnun04u1p", options);
 </script>
