--- a/slides/introduction-to-javascript.html
+++ b/slides/introduction-to-javascript.html
@@ -525,26 +525,9 @@
         <div class="slide">
             <div class="slide-content">
                 <h1>Script in the Body</h1>
-                <div class="two-column">
-                    <div>
-                        <p>Scripts in the body execute immediately when the browser reaches them:</p>
-                        <pre><code>&lt;p&gt;We last worked on it on this date:
-&lt;script&gt;
-  const now = new Date();
-  document.write(now.toLocaleDateString());
-&lt;/script&gt;
-&lt;/p&gt;</code></pre>
-                        <ul>
-                            <li><code>document.write()</code> outputs text to the page</li>
-                            <li><code>new Date()</code> creates a Date object</li>
-                            <li><code>toLocaleDateString()</code> formats the date</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <div class="codepen-container">
-                            <iframe title="Document Write Date" src="https://codepen.io/mattkearl/embed/XJKaXEa?default-tab=html%2Cresult&editable=true" loading="lazy"></iframe>
-                        </div>
-                    </div>
+                <p>Scripts in the body execute immediately when the browser reaches them.</p>
+                <div class="codepen-container" style="flex: 1; min-height: 450px;">
+                    <iframe title="Document Write Date" src="https://codepen.io/mattkearl/embed/XJKaXEa?default-tab=html%2Cresult&editable=true" loading="lazy" style="min-height: 450px;"></iframe>
                 </div>
             </div>
         </div>
@@ -587,24 +570,9 @@
         <div class="slide">
             <div class="slide-content">
                 <h1>Event Handlers</h1>
-                <div class="two-column">
-                    <div>
-                        <p>Event handlers respond to user actions directly in HTML:</p>
-                        <pre><code>&lt;button type="button"
-    onclick="alert('You clicked the button.')"&gt;
-  Click Me!
-&lt;/button&gt;</code></pre>
-                        <ul>
-                            <li>Inline JavaScript in HTML attributes</li>
-                            <li>Execute when the event occurs</li>
-                            <li>Common events: <code>onclick</code>, <code>onmouseover</code>, <code>onload</code></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <div class="codepen-container">
-                            <iframe title="Event Handler Demo" src="https://codepen.io/mattkearl/embed/ogLebqM?default-tab=html%2Cresult&editable=true" loading="lazy"></iframe>
-                        </div>
-                    </div>
+                <p>Event handlers respond to user actions directly in HTML attributes.</p>
+                <div class="codepen-container" style="flex: 1; min-height: 450px;">
+                    <iframe title="Event Handler Demo" src="https://codepen.io/mattkearl/embed/ogLebqM?default-tab=html%2Cresult&editable=true" loading="lazy" style="min-height: 450px;"></iframe>
                 </div>
             </div>
         </div>
@@ -794,29 +762,9 @@ now.toLocaleString();
         <div class="slide">
             <div class="slide-content">
                 <h1>Displaying Time with JavaScript</h1>
-                <div class="two-column">
-                    <div>
-                        <p>Use <code>document.write()</code> to output date/time:</p>
-                        <pre><code>&lt;script&gt;
-  const now = new Date();
-  const localtime = now.toString();
-  const utctime = now.toUTCString();
-
-  document.write("&lt;p&gt;&lt;strong&gt;Local time:&lt;/strong&gt; "
-    + localtime + "&lt;/p&gt;");
-  document.write("&lt;p&gt;&lt;strong&gt;UTC time:&lt;/strong&gt; "
-    + utctime + "&lt;/p&gt;");
-&lt;/script&gt;</code></pre>
-                        <ul>
-                            <li><code>toString()</code> - Full local date/time string</li>
-                            <li><code>toUTCString()</code> - UTC formatted string</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <div class="codepen-container">
-                            <iframe title="Date Time Display" src="https://codepen.io/mattkearl/embed/vEKJLjv?default-tab=html%2Cresult&editable=true" loading="lazy"></iframe>
-                        </div>
-                    </div>
+                <p>Use <code>document.write()</code> to output date and time to the page.</p>
+                <div class="codepen-container" style="flex: 1; min-height: 450px;">
+                    <iframe title="Date Time Display" src="https://codepen.io/mattkearl/embed/vEKJLjv?default-tab=html%2Cresult&editable=true" loading="lazy" style="min-height: 450px;"></iframe>
                 </div>
             </div>
         </div>
@@ -825,21 +773,9 @@ now.toLocaleString();
         <div class="slide">
             <div class="slide-content">
                 <h1>Building a 12-Hour Clock</h1>
-                <div class="two-column">
-                    <div>
-                        <p>This example demonstrates:</p>
-                        <ul>
-                            <li>Getting hours, minutes, seconds with <code>getHours()</code>, <code>getMinutes()</code>, <code>getSeconds()</code></li>
-                            <li>Adding leading zeros for single digits</li>
-                            <li>Converting 24-hour to 12-hour format</li>
-                            <li>Displaying AM/PM</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <div class="codepen-container">
-                            <iframe title="Large Clock" src="https://codepen.io/mattkearl/embed/NPrvxzq?default-tab=html%2Cresult&editable=true" loading="lazy"></iframe>
-                        </div>
-                    </div>
+                <p>This example shows getting time components, adding leading zeros, and converting to 12-hour format.</p>
+                <div class="codepen-container" style="flex: 1; min-height: 450px;">
+                    <iframe title="Large Clock" src="https://codepen.io/mattkearl/embed/NPrvxzq?default-tab=html%2Cresult&editable=true" loading="lazy" style="min-height: 450px;"></iframe>
                 </div>
             </div>
         </div>
