More JS Slide Changes

--- a/slides/introduction-to-javascript.html
+++ b/slides/introduction-to-javascript.html
@@ -813,27 +813,9 @@ now.toLocaleString();
         <div class="slide">
             <div class="slide-content">
                 <h1>Debugging with console.log()</h1>
-                <div class="two-column">
-                    <div>
-                        <p>Output messages to the browser console:</p>
-                        <pre><code>// Log text
-console.log("Hello, console!");
-
-// Log variables
-const name = "Alice";
-console.log("User:", name);
-
-// Log multiple values
-console.log("Sum:", 5 + 3);
-
-// Log objects
-console.log({ name: "Bob", age: 30 });</code></pre>
-                    </div>
-                    <div>
-                        <div class="codepen-container">
-                            <iframe title="Console Log Demo" src="https://codepen.io/mattkearl/embed/wBWqGYe?default-tab=js%2Cresult&editable=true" loading="lazy"></iframe>
-                        </div>
-                    </div>
+                <p>Output messages to the browser console to debug your code.</p>
+                <div class="codepen-container" style="flex: 1; min-height: 450px;">
+                    <iframe title="Console Log Demo" src="https://codepen.io/mattkearl/embed/wBWqGYe?default-tab=js%2Cresult&editable=true" loading="lazy" style="min-height: 450px;"></iframe>
                 </div>
             </div>
         </div>
